--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,18 @@
+[build]
+  command = "npm run build"
+  functions = "netlify/functions"
+  publish = "frontend/dist"
+
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["express"]
+
 [[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
+  from = "/api/*"
+  to = "/.netlify/functions/server/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
