--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,8 @@
 
 [functions]
   node_bundler = "esbuild"
-  external_node_modules = ["express"]
+  # Include cors and all other external modules your app depends on
+  external_node_modules = ["express", "cors", "mongoose", "dotenv"]
 
 [[redirects]]
   from = "/api/*"
