--- a/netlify.toml
+++ b/netlify.toml
@@ -9,11 +9,7 @@
   external_node_modules = ["express", "cors", "mongoose", "dotenv"]
 
 [[redirects]]
+force = true
   from = "/api/*"
   to = "/.netlify/functions/server/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
   status = 200
