--- a/netlify.toml
+++ b/netlify.toml
@@ -1,22 +1,8 @@
-[build]
-  command = "npm run build"
-  functions = "netlify/functions"
-  publish = "frontend/dist"
-
 [functions]
+  external_node_modules = ["express"]
   node_bundler = "esbuild"
-  # Include all external modules your app depends on
-  external_node_modules = ["express", "cors", "mongoose", "dotenv", "serverless-http"]
-
-
 [[redirects]]
   force = true
   from = "/api/*"
-  to = "/.netlify/functions/server/:splat"
   status = 200
-
-[[redirects]]
-  force = true
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  to = "/.netlify/functions/api/:splat"
