--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,17 @@
+[build]
+  command = "npm run build"
+  functions = "netlify/functions"
+  publish = "frontend/dist"
+
 [functions]
-  external_node_modules = ["express"]
   node_bundler = "esbuild"
+  # Include all external modules your app depends on
+  external_node_modules = ["express", "cors", "mongoose", "dotenv", "serverless-http"]
+
+
 [[redirects]]
   force = true
   from = "/api/*"
-  status = 200
   to = "/.netlify/functions/server/:splat"
+  status = 200
+
